--- a/index.html
+++ b/index.html
@@ -12,44 +12,54 @@
   </head>
   <body>
     <div class="container">
-      <header class="header">
-        <div class="header-inner">
-          <div class="logo"><img src="images/logo.svg" alt="Logo" /></div>
-          <nav class="header-nav">
-            <ul class="nav-list">
-              <li class="nav-item"><a href="#" class="nav-link">Sell</a></li>
-              <li class="nav-item">
-                <a href="#" class="nav-link">Marketplace</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link">Community</a>
-              </li>
-              <li class="nav-item"><a href="#" class="nav-link">Develop</a></li>
-              <li class="nav-item">
-                <a href="#" class="nav-link">Resources</a>
-              </li>
-            </ul>
-          </nav>
-          <div class="header-right">
-            <a href="#" class="header-login">Log In</a>
-            <button class="header-button">Get Started</button>
-            <div class="header-search">
-              <form action="#" id="searchform" method="get">
-                <span class="icon-search"></span>
-              </form>
+      <section class="hero">
+        <header class="header">
+          <div class="header-inner">
+            <div class="logo"><img src="images/logo.svg" alt="Logo" /></div>
+            <nav class="header-nav">
+              <ul class="nav-list">
+                <li class="nav-item"><a href="#" class="nav-link">Sell</a></li>
+                <li class="nav-item">
+                  <a href="#" class="nav-link">Marketplace</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#" class="nav-link">Community</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#" class="nav-link">Develop</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#" class="nav-link">Resources</a>
+                </li>
+              </ul>
+            </nav>
+            <div class="header-right">
+              <a href="#" class="header-login">Log In</a>
+              <button class="header-button">Get Started</button>
+              <div class="header-search">
+                <form action="#" id="searchform" method="get">
+                  <span class="icon-search"></span>
+                </form>
+              </div>
             </div>
           </div>
+        </header>
+
+        <div class="hero-content">
+          <div class="hero-text">
+            <h1 class="hero-title">
+              Building exactly the eCommerce website you want.
+            </h1>
+            <p>
+              WooCommerce is a customizable, open-source eCommerce platform
+              built on WordPress. Get started quickly and make your way.
+            </p>
+            <button class="hero-button">Start a New Store</button>
+          </div>
+          <div class="hero-image">
+            <img src="images/hero-image.png" alt="Hero Image" />
+          </div>
         </div>
-      </header>
-      <section class="hero">
-        <h1 class="hero-title">
-          Building exactly the eCommerce website you want.
-        </h1>
-        <p>
-          WooCommerce is a customizable, open-source eCommerce platform built on
-          WordPress. Get started quickly and make your way.
-        </p>
-        <button class="hero-button">Start a New Store</button>
       </section>
       <section class="features"></section>
       <section class="descr"></section>
