hero action styled

--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
               WooCommerce is a customizable, open-source eCommerce platform
               built on WordPress. Get started quickly and make your way.
             </p>
-            <button class="hero-button">Start a New Store</button>
+            <div class="hero-action">
+              <button class="hero-button">Start a New Store</button>
+              <a href="#"><span>or</span> Customize & Extend ›</a>
+            </div>
+            
           </div>
           <div class="hero-image">
             <img src="images/hero-image.png" alt="Hero Image" />
