features section start

--- a/index.html
+++ b/index.html
@@ -58,14 +58,17 @@
               <button class="hero-button">Start a New Store</button>
               <a href="#"><span>or</span> Customize & Extend ›</a>
             </div>
-            
           </div>
           <div class="hero-image">
             <img src="images/hero-image.png" alt="Hero Image" />
           </div>
         </div>
       </section>
-      <section class="features"></section>
+
+      <section class="features">
+        <h2 class="features-title section-title">Your eCommerce made simple</h2>
+      </section>
+
       <section class="descr"></section>
       <section class="tstmnls"></section>
       <section class="cta"></section>
