features section card title

--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
 
       <section class="features">
         <h2 class="features-title section-title">Your eCommerce made simple</h2>
+        <div class="features-cards">
+          <div class="features-card">
+            <h3 class="features-card__title">All You Need to Start</h3>
+          </div>
+          <div class="features-card">
+            <h3 class="features-card__title">Customize and Extend</h3>
+          </div>
+          <div class="features-card">
+            <h3 class="features-card__title">Active Community</h3>
+          </div>
+        </div>
       </section>
 
       <section class="descr"></section>
