--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </header>
 
         <div class="hero-content">
-          <div class="hero-text">
+          <div class="hero-content__text">
             <h1 class="hero-title">
               Building exactly the eCommerce website you want.
             </h1>
@@ -59,14 +59,17 @@
               <a href="#"><span>or</span> Customize & Extend ›</a>
             </div>
           </div>
-          <div class="hero-image">
+          <div class="hero-content__image">
             <img src="images/hero-image.png" alt="Hero Image" />
           </div>
         </div>
       </section>
 
       <section class="features">
-        <h2 class="features-title section-title">Your eCommerce made simple</h2>
+        <h2 class="features-title section-title">
+          Your eCommerce<br />
+          made simple
+        </h2>
       </section>
 
       <section class="descr"></section>
