features section edition

--- a/index.html
+++ b/index.html
@@ -69,27 +69,50 @@
         <h2 class="features-title section-title">Your eCommerce made simple</h2>
         <div class="features-cards">
           <div class="features-card">
-            <h3 class="features-card__title">All You Need to Start</h3>
-            <p>
-              Add WooCommerce plugin to any WordPress site and set up a new
-              store in minutes.
-            </p>
-            <a href="#" class="features-link link">Ecommerce for Wordpress ›</a>
+            <img
+              src="images/features-1.png"
+              alt="features-1"
+              class="features-img"
+            />
+            <div class="features-card__text">
+              <h3 class="features-card__title">All You Need to Start</h3>
+              <p>
+                Add WooCommerce plugin to any WordPress site and set up a new
+                store in minutes.
+              </p>
+              <a href="#" class="features-link link"
+                >Ecommerce for Wordpress ›</a
+              >
+            </div>
           </div>
           <div class="features-card">
-            <h3 class="features-card__title">Customize and Extend</h3>
-            <p>
-              From subscriptions to gym classes to luxury cars, WooCommerce is
-              fully customizable.
-            </p>
-            <a href="#" class="features-link link">Browse Extensions ›</a>
+            <img
+              src="images/features-2.png"
+              alt="features-2"
+              class="features-img"
+            />
+            <div class="features-card__text">
+              <h3 class="features-card__title">Customize and Extend</h3>
+              <p>
+                From subscriptions to gym classes to luxury cars, WooCommerce is
+                fully customizable.
+              </p>
+              <a href="#" class="features-link link">Browse Extensions ›</a>
+            </div>
           </div>
           <div class="features-card">
-            <h3 class="features-card__title">Active Community</h3>
-            <p>
-              WooCommerce is one of the fastest-growing eCommerce communities.
-            </p>
-            <a href="#" class="features-link link">Check our Forums ›</a>
+            <img
+              src="images/features-3.png"
+              alt="features-3"
+              class="features-img"
+            />
+            <div class="features-card__text">
+              <h3 class="features-card__title">Active Community</h3>
+              <p>
+                WooCommerce is one of the fastest-growing eCommerce communities.
+              </p>
+              <a href="#" class="features-link link">Check our Forums ›</a>
+            </div>
           </div>
         </div>
       </section>
