features card save forget

--- a/index.html
+++ b/index.html
@@ -74,8 +74,16 @@
               alt="features-1"
               class="features-img"
             />
-            <img class="features-img__payment" src="images/features-1-payment.png" alt="Payment">
-            <img class="features-img__icon" src="images/features-1-icon-pay.svg" alt="Payment Icon">
+            <img
+              class="features-img__payment"
+              src="images/features-1-payment.png"
+              alt="Payment"
+            />
+            <img
+              class="features-img__icon"
+              src="images/features-1-icon-pay.svg"
+              alt="Payment Icon"
+            />
             <div class="features-card__text">
               <h3 class="features-card__title">All You Need to Start</h3>
               <p>
