add small images features carda

--- a/index.html
+++ b/index.html
@@ -95,12 +95,14 @@
               >
             </div>
           </div>
+
           <div class="features-card">
             <img
               src="images/features-2.png"
               alt="features-2"
               class="features-img"
             />
+            <img class="features-img__square" src="images/features-2-icon-square.svg" alt="Icon Square">
             <div class="features-card__text">
               <h3 class="features-card__title">Customize and Extend</h3>
               <p>
@@ -110,12 +112,16 @@
               <a href="#" class="features-link link">Browse Extensions ›</a>
             </div>
           </div>
+
           <div class="features-card">
             <img
               src="images/features-3.png"
               alt="features-3"
               class="features-img"
             />
+            <img src="images/features-3-small.png" alt="Image Small">
+            <img src="images/features-3-medium.png" alt="Image Medium">
+            <img src="images/features-3-large.png" alt="Image Large">
             <div class="features-card__text">
               <h3 class="features-card__title">Active Community</h3>
               <p>
