--- a/index.html
+++ b/index.html
@@ -102,7 +102,11 @@
               alt="features-2"
               class="features-img"
             />
-            <img class="features-img__square" src="images/features-2-icon-square.svg" alt="Icon Square">
+            <img
+              class="features-img__square"
+              src="images/features-2-icon-square.svg"
+              alt="Icon Square"
+            />
             <div class="features-card__text">
               <h3 class="features-card__title">Customize and Extend</h3>
               <p>
@@ -119,9 +123,21 @@
               alt="features-3"
               class="features-img"
             />
-            <img src="images/features-3-small.png" alt="Image Small">
-            <img src="images/features-3-medium.png" alt="Image Medium">
-            <img src="images/features-3-large.png" alt="Image Large">
+            <img
+              class="features-img__small"
+              src="images/features-3-small.png"
+              alt="Image Small"
+            />
+            <img
+              class="features-img__medium"
+              src="images/features-3-medium.png"
+              alt="Image Medium"
+            />
+            <img
+              class="features-img__large"
+              src="images/features-3-large.png"
+              alt="Image Large"
+            />
             <div class="features-card__text">
               <h3 class="features-card__title">Active Community</h3>
               <p>
